# iltasatu

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
cli/: CMakeLists.txt  iltasatu_cli.cpp
gui/: CMakeLists.txt  iltasatu_gui.cpp  iltasatu_gui.hpp  mainwindow.cpp  mainwindow.hpp  pch.hpp
lib/: CMakeLists.txt  iltasatu.c  iltasatu.cpp  iltasatu.h  iltasatu.hpp
lib/posix/: iltasatu_posix.cpp
lib/windows/: iltasatu_windows.cpp
