if (CMAKE_SYSTEM_NAME MATCHES "Windows")
	file(GLOB ILTASATU_LIB_SRC "*.c" "*.cpp" "*.h" "*.hpp" "windows/*.cpp")
	add_library("iltasatu" SHARED ${ILTASATU_LIB_SRC})
else()
	file(GLOB ILTASATU_LIB_SRC "*.c" "*.cpp" "*.h" "*.hpp" "posix/*.cpp")
	add_library("iltasatu" SHARED ${ILTASATU_LIB_SRC})
endif()